--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 .margen {
   margin: 100px;
 }
@@ -10,4 +14,17 @@
 .tabla td {
   padding-top: 10px;
   padding-button: 10px;
+}
+
+#menu {
+  background-color: #253a46;
+  padding: 20px;
+  font-size: 20px;
+
+}
+
+#menu a {
+  color: White;
+  padding-right: 50px;
+  text-decoration: none;
 }
